# realEstateWeb

./: .gitignore  db.sqlite11  main.py  manage.py  pyproject.toml  requirements.txt  test_properties_api.py  test_property_creation.py
app/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
app/management/commands/: create_sample_data.py  create_sample_organization.py  create_sample_team.py  fix_user_roles.py  generate_fake_data.py
app/migrations/: 0001_initial.py  0002_aboutus_agent_gallery_heroslide_journeystep_and_more.py  0002_remove_agent_user.py  0002_team.py  0002_user_role.py  0003_add_area_unit_to_property.py  0003_user_phone_number.py  0004_add_land_area_and_maps.py  0005_add_property_purpose_and_nullable_bedrooms.py  0006_alter_property_area_alter_property_area_unit_and_more.py  0007_alter_property_google_maps_embed_url.py
realEstateWeb/: asgi.py  settings.py  urls.py  wsgi.py
